--- a/todo.txt
+++ b/todo.txt
@@ -7,11 +7,12 @@ GIT
 - stage some file [git add ]
 - git rm [取消準備要變更的add中的文件]
     git rm --cache [file name]
+    git checkout [file name] 將檔案回覆到上個commit
 - git reset [回覆commit的狀態, 將所有檔案恢復到原本的狀態]
     git reset HEAD
 - 有5個檔案變更過，將某個檔案恢復到原本的狀態
     git clean -> 對untrack file作用 (DEL)
-    
+
 - git hook 的作用 [知道是這是啥]
 - git merge 要會用
 - 要會解 conflict
